# mpi_template

./: CMakeLists.txt  LICENSE  README.md  hostfile  main.cpp  test.sh
